Support customizing hint color

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -13,8 +13,8 @@ ByoYomiAutoPlayDialog.labelBlack.text=Black
 ByoYomiAutoPlayDialog.labelCountdownValue.text=30
 ByoYomiAutoPlayDialog.labelCountdownIndicator.text=Count down
 ByoYomiAutoPlayDialog.labelSeconds.text=second(s).
-ByoYomiAutoPlayDialog.labelCountdownTime.text=Count down\:
-ByoYomiAutoPlayDialog.labelSettings.text=Settings\:
+ByoYomiAutoPlayDialog.labelCountdownTime.text=Count down:
+ByoYomiAutoPlayDialog.labelSettings.text=Settings:
 ByoYomiAutoPlayDialog.labelNotes.text=<html><b>Automatically play a move when byo-yomi(count down) ends.</b><br>Usually used for playing with leelaz.<br>For example, you can turn off the suggesstions and set count down time.</html>
 ByoYomiAutoPlayDialog.this.title=Byo-yomi Auto Play
 ChangeMoveDialog.cancelButton.text=Cancel
@@ -24,10 +24,10 @@ ChangeMoveDialog.labelNotes.text=<html>Please input the move number and the corr
 ChangeMoveDialog.okButton.text=OK
 ChangeMoveDialog.this.title=Change existing move
 EngineProfileManagerDialog.cancelButton.text=Cancel
-EngineProfileManagerDialog.labelProfile2.text=Profile 2\:
-EngineProfileManagerDialog.labelProfile3.text=Profile 3\:
-EngineProfileManagerDialog.labelProfile4.text=Profile 4\:
-EngineProfileManagerDialog.labelProfile5.text=Profile 5\:
+EngineProfileManagerDialog.labelProfile2.text=Profile 2:
+EngineProfileManagerDialog.labelProfile3.text=Profile 3:
+EngineProfileManagerDialog.labelProfile4.text=Profile 4:
+EngineProfileManagerDialog.labelProfile5.text=Profile 5:
 EngineProfileManagerDialog.labelProfile1.text=Profile 1:
 EngineProfileManagerDialog.labelProfile6.text=Profile 6:
 EngineProfileManagerDialog.labelProfile7.text=Profile 7:
@@ -44,7 +44,7 @@ OptionDialog.checkBoxAutoStartThinkingAfterPlacingMoves.text=Auto start analyzin
 OptionDialog.checkBoxTransparentVariation.text=Display transparent variation stones
 OptionDialog.checkBoxAnalysisWindowShow.text=Show move list
 OptionDialog.checkBoxAutoEnterTryPlayingMode.text=Automatically enter when placing stone in middle game.
-OptionDialog.checkBoxFancyStones.text=Fancy stones
+OptionDialog.checkBoxFancyStones.text=Fancy (Use Image)
 OptionDialog.checkBoxMainWindowAlwaysOnTop.text=Always on top
 OptionDialog.checkBoxMouseMoveShow.text=Mouse over show move.
 OptionDialog.checkBoxMoveNumberLimit.text=Only show last
@@ -52,15 +52,13 @@ OptionDialog.checkBoxPlayoutsInShortForm.text=Playouts in short form
 OptionDialog.checkBoxShowBlackSuggestion.text=Show black
 OptionDialog.checkBoxShowMoveNumber.text=Show
 OptionDialog.checkBoxShowNextMove.text=Show next move
-OptionDialog.checkBoxShowShadow.text=Show. Shadow size:
+OptionDialog.checkBoxShowShadow.text=Show shadow. Shadow size:
 OptionDialog.checkBoxShowWhiteSuggestion.text=Show white
-OptionDialog.labelBoardSize.text=Board size selection\:
+OptionDialog.labelBestSuggestionColorHint.text=Best suggestion hint circle color\:
+OptionDialog.labelBoardSize.text=Board size selection:
 OptionDialog.labelAnalysisModeOn.text=Analysis mode:
 OptionDialog.labelAxisSetting.text=Axis setting:
 OptionDialog.labelBoardDisplay.text=Board display:
-OptionDialog.labelColorBlue.text=B
-OptionDialog.labelColorGreen.text=G
-OptionDialog.labelColorRed.text=R
 OptionDialog.labelLeelazCommandLine.text=Leelaz command line:
 OptionDialog.labelMainWindow.text=Main window:
 OptionDialog.labelMaxAnalysisTime.text=Max time:
@@ -68,7 +66,7 @@ OptionDialog.labelMinute.text=minute(s)
 OptionDialog.labelMoveNumber.text=Move number:
 OptionDialog.labelMoveNumberLimitLabelTail.text=move(s).
 OptionDialog.labelNotes.text=Note: Please wait patiently for a while for lizzie to restart after you change the command line.
-OptionDialog.labelShadow.text=Stone shadow:
+OptionDialog.labelStoneDisplay.text=Stone display:
 OptionDialog.labelSuggestion.text=Suggestions:
 OptionDialog.labelTryPlayingMode.text=Try playing mode:
 OptionDialog.labelVariationLimit.text=Variation limit:
@@ -79,7 +77,7 @@ OptionDialog.radioButtonBoard9x9.text=9x9
 OptionDialog.radioButtonA1Bottom.text=A1 is on bottom(Standard, e.g. Yike, Zen, .etc)
 OptionDialog.radioButtonA1Top.text=A1 is on top(Yehu)
 OptionDialog.radioButtonBoardClassic.text=Classic:
-OptionDialog.radioButtonBoardFancy.text=Fancy
+OptionDialog.radioButtonBoardFancy.text=Fancy (Use image)
 OptionDialog.radioButtonUnlimited.text=Unlimited
 OptionDialog.radioButtonV10.text=10
 OptionDialog.radioButtonV15.text=15
@@ -88,7 +86,7 @@ OptionDialog.radioButtonV5.text=5
 OptionDialog.this.title=Options
 WinrateHistogramDialog.checkBoxHistogramShowBlack.text=Show black
 WinrateHistogramDialog.checkBoxHistogramShowWhite.text=Show white
-WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=Show only moves with winrate change greater than\:
+WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=Show only moves with winrate change greater than:
 WinrateHistogramDialog.this.title=Winrate Histogram
 WinrateHistogramDialog.histogramTable.title.moveNumber=Move Number
 WinrateHistogramDialog.histogramTable.title.color=Color
@@ -135,7 +133,7 @@ LizzieFrame.controls.keyF1=Hold F1 to view controls
 LizzieFrame.controls.keyT=T | Estimate territory and score
 LizzieFrame.prompt.noEstimatorEngine=GNU Go or Zen not found in Lizzie's directory. Score estimation cannot perform.
 LizzieFrame.prompt.scoreEstimation=Score estimation by engine %s (komi %.1f): %s leads %.1f point(s).
-AboutDialog.labelAuthor.text=<html>Author\: Aeris (QQ\: 417214250)<br>License\: GPLv3<br>Source code\: https\://github.com/aerisnju/mylizzie<br>This project is derived from <b>featurecat's lizzie</b>(GPLv3).<br>Original lizzie's source code\: https\://github.com/featurecat/lizzie</html>
+AboutDialog.labelAuthor.text=<html>Author: Aeris (QQ: 417214250)<br>License: GPLv3<br>Source code: https://github.com/aerisnju/mylizzie<br>This project is derived from <b>featurecat's lizzie</b>(GPLv3).<br>Original lizzie's source code: https://github.com/featurecat/lizzie</html>
 AboutDialog.labelMyLizzie.text=MyLizzie
 AboutDialog.labelVersion.text=dev-build
 AboutDialog.okButton.text=OK
