--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -25,7 +25,7 @@ OptionDialog.buttonResetCommandLine.text=\u91CD\u7F6E
 OptionDialog.cancelButton.text=\u53D6\u6D88
 OptionDialog.checkBoxAnalysisWindowShow.text=\u663E\u793A\u53D8\u5316\u56FE\u5217\u8868\u7A97\u53E3
 OptionDialog.checkBoxAutoEnterTryPlayingMode.text=\u5728\u68CB\u8C31\u4E2D\u95F4\u843D\u5B50\u65F6\u81EA\u52A8\u8FDB\u5165\u8BD5\u4E0B\u6A21\u5F0F
-OptionDialog.checkBoxFancyStones.text=\u9177\u70AB\u68CB\u5B50
+OptionDialog.checkBoxFancyStones.text=\u9177\u70AB(\u4F7F\u7528\u56FE\u7247)
 OptionDialog.checkBoxMainWindowAlwaysOnTop.text=\u603B\u662F\u5728\u6700\u524D\u7AEF
 OptionDialog.checkBoxMouseMoveShow.text=\u9F20\u6807\u6ED1\u8FC7\u663E\u793A\u53D8\u5316\u56FE
 OptionDialog.checkBoxMoveNumberLimit.text=\u53EA\u663E\u793A\u6700\u540E
@@ -33,14 +33,11 @@ OptionDialog.checkBoxPlayoutsInShortForm.text=\u4F7F\u7528??k,??m\u7B49\u77ED\u6
 OptionDialog.checkBoxShowBlackSuggestion.text=\u663E\u793A\u9ED1\u68CB\u7684\u9009\u70B9\u5EFA\u8BAE
 OptionDialog.checkBoxShowMoveNumber.text=\u663E\u793A
 OptionDialog.checkBoxShowNextMove.text=\u663E\u793A\u4E0B\u4E00\u624B(\u5982\u679C\u6709)
-OptionDialog.checkBoxShowShadow.text=\u663E\u793A. \u9634\u5F71\u5927\u5C0F:
+OptionDialog.checkBoxShowShadow.text=\u663E\u793A\u9634\u5F71. \u5927\u5C0F:
 OptionDialog.checkBoxShowWhiteSuggestion.text=\u663E\u793A\u767D\u68CB\u7684\u9009\u70B9\u5EFA\u8BAE
 OptionDialog.labelAnalysisModeOn.text=\u5206\u6790\u6A21\u5F0F:
-OptionDialog.labelAxisSetting.text=\u5750\u6807\u663E\u793A\u8BBE\u7F6E:
-OptionDialog.labelBoardDisplay.text=\u68CB\u76D8\u663E\u793A\u8BBE\u7F6E:
-OptionDialog.labelColorBlue.text=\u84DD
-OptionDialog.labelColorGreen.text=\u7EFF
-OptionDialog.labelColorRed.text=\u7EA2
+OptionDialog.labelAxisSetting.text=\u5750\u6807\u8BBE\u7F6E:
+OptionDialog.labelBoardDisplay.text=\u68CB\u76D8\u663E\u793A:
 OptionDialog.labelLeelazCommandLine.text=Leelaz\u7684\u547D\u4EE4\u884C\u9009\u9879:
 OptionDialog.labelMainWindow.text=\u4E3B\u7A97\u53E3:
 OptionDialog.labelMaxAnalysisTime.text=\u6700\u957F\u5206\u6790\u65F6\u95F4:
@@ -48,7 +45,7 @@ OptionDialog.labelMinute.text=\u5206\u949F
 OptionDialog.labelMoveNumber.text=\u624B\u6570:
 OptionDialog.labelMoveNumberLimitLabelTail.text=\u624B.
 OptionDialog.labelNotes.text=\u6CE8\u610F\uFF1A\u4FEE\u6539\u5B8CLeelaz\u547D\u4EE4\u884C\u9009\u9879\u540E, Leelaz\u4F1A\u81EA\u52A8\u91CD\u542F\uFF0C\u671F\u95F4\u754C\u9762\u6CA1\u6709\u52A8\u9759\uFF0C\u8BF7\u8010\u5FC3\u7B49\u4E00\u4F1A\uFF0C\u4E0D\u8981\u64CD\u4F5C
-OptionDialog.labelShadow.text=\u68CB\u5B50\u9634\u5F71:
+OptionDialog.labelStoneDisplay.text=\u68CB\u5B50\u663E\u793A:
 OptionDialog.labelSuggestion.text=\u9009\u70B9\u5EFA\u8BAE:
 OptionDialog.labelTryPlayingMode.text=\u8BD5\u4E0B\u6A21\u5F0F:
 OptionDialog.labelVariationLimit.text=\u53D8\u5316\u56FE\u6DF1\u5EA6\u9650\u5236:
@@ -56,7 +53,7 @@ OptionDialog.okButton.text=\u786E\u5B9A
 OptionDialog.radioButtonA1Bottom.text=A1\u5728\u5DE6\u4E0B\u89D2(\u6807\u51C6\u65B9\u5F0F\uFF0C\u5982\u5F08\u5BA2, Zen\u7B49)
 OptionDialog.radioButtonA1Top.text=A1\u5728\u5DE6\u4E0A\u89D2(\u91CE\u72D0)
 OptionDialog.radioButtonBoardClassic.text=\u7ECF\u5178\u7EAF\u8272:
-OptionDialog.radioButtonBoardFancy.text=\u9177\u70AB
+OptionDialog.radioButtonBoardFancy.text=\u9177\u70AB(\u4F7F\u7528\u56FE\u7247)
 OptionDialog.radioButtonUnlimited.text=\u4E0D\u9650\u5236
 OptionDialog.radioButtonV10.text=10\u6B65
 OptionDialog.radioButtonV15.text=15\u6B65
@@ -65,7 +62,7 @@ OptionDialog.radioButtonV5.text=5\u6B65
 OptionDialog.this.title=\u9009\u9879
 WinrateHistogramDialog.checkBoxHistogramShowBlack.text=\u663E\u793A\u9ED1\u68CB\u80DC\u7387
 WinrateHistogramDialog.checkBoxHistogramShowWhite.text=\u663E\u793A\u767D\u68CB\u80DC\u7387
-WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=\u53EA\u663E\u793A\u80DC\u7387\u6CE2\u52A8\u8D85\u8FC7\u9608\u503C\u7684\u624B\u6570. \u9608\u503C\:
+WinrateHistogramDialog.checkBoxShowOnlyHighOscillation.text=\u53EA\u663E\u793A\u80DC\u7387\u6CE2\u52A8\u8D85\u8FC7\u9608\u503C\u7684\u624B\u6570. \u9608\u503C:
 WinrateHistogramDialog.this.title=\u80DC\u7387\u56FE
 WinrateHistogramDialog.histogramTable.title.moveNumber=\u624B\u6570
 WinrateHistogramDialog.histogramTable.title.color=\u884C\u68CB\u65B9(\u9ED1B\u767DW)
@@ -180,3 +177,4 @@ LizzieFrame.prompt.detailedScoreEstimation=%s\u7684\u70B9\u76EE\u7ED3\u679C(\u9E
 \u767D\u68CB\u63D0\u5B50: %d\u4E2A\n\
 \u9ED1\u767D\u5730\u57DF\u5305\u62EC\u5BF9\u65B9\u6B7B\u5B50\u6240\u5360\u7684\u4EA4\u53C9\u70B9\uFF1B\u8BA1\u7B97\u76EE\u6570\u65F6\u6B7B\u5B50\u6570\u4E0D\u9700\u8981\u4E58\u4EE52.
 OptionDialog.checkBoxShowAxis.text=\u663E\u793A
+OptionDialog.labelBestSuggestionColorHint.text=\u9996\u9009\u70B9\u6307\u793A\u5708\u989C\u8272:
