Refactored analyzing framework

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -20,7 +20,7 @@ ByoYomiAutoPlayDialog.this.title=Byo-yomi Auto Play
 ChangeMoveDialog.cancelButton.text=Cancel
 ChangeMoveDialog.labelChangeTo.text=Change coordinates to:
 ChangeMoveDialog.labelMoveNumber.text=Move number:
-ChangeMoveDialog.labelNotes.text=<html>Please input the move number and the correct coordinate you want to modify.<br>The move number should be a positive number.<br>The format of coords are like "A1" or "T19"</html>
+ChangeMoveDialog.labelNotes.text=<html>Please input the move number and the correct coordinate you want to modify.<br>The move number should be a positive number.<br>The format of coords are like "A1" or "T19" or "pass"</html>
 ChangeMoveDialog.okButton.text=OK
 ChangeMoveDialog.this.title=Change existing move
 EngineProfileManagerDialog.cancelButton.text=Cancel
