--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -17,7 +17,7 @@ EngineProfileManagerDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.labelChangeTo.text=\u4FEE\u6539\u5750\u6807\u4E3A:
 ChangeMoveDialog.labelMoveNumber.text=\u8981\u4FEE\u6539\u7684\u624B\u6570:
-ChangeMoveDialog.labelNotes.text=<html>\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. <br>\u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u7684\u624B\u6570\u3002\u5982\u679C\u770B\u4E0D\u5230\u624B\u6570\uFF0C\u8BF7\u6309N\u952E\u663E\u793A\u3002<br>\u5750\u6807\u5F62\u5F0F\u5982A1\u3001T19\uFF0C\u5B57\u6BCD\u5728\u524D\u4E14\u9700\u4E3A\u5927\u5199</html>
+ChangeMoveDialog.labelNotes.text=<html>\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. <br>\u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u624B\u6570\u3002\u5982\u679C\u770B\u4E0D\u5230\u624B\u6570\uFF0C\u8BF7\u5173\u95ED\u5BF9\u8BDD\u6846\u540E\u6309N\u952E\u3002<br>\u5750\u6807\u5F62\u5F0F\u5982A1\u3001T19\uFF0C\u5B57\u6BCD\u5728\u524D\uFF0C\u6216\u8005pass\u3002</html>
 ChangeMoveDialog.okButton.text=\u786E\u5B9A
 ChangeMoveDialog.this.title=\u4FEE\u6539\u5DF2\u4E0B\u7684\u5B50
 OptionDialog.buttonManage.text=\u7BA1\u7406...
