Implemented GTP console

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -36,6 +36,9 @@ EngineProfileManagerDialog.labelProfile9.text=Profile 9:
 EngineProfileManagerDialog.labelProfileManagerNote.text=Configure common used profiles below. Each profile has a shortcut CTRL + <Profile Number>
 EngineProfileManagerDialog.okButton.text=OK
 EngineProfileManagerDialog.this.title=Engine Profile Manager
+GtpConsoleDialog.buttonClear.toolTipText=Clear console
+GtpConsoleDialog.labelInfo.text=<html>Please do not input commands that can change the board state, such as play, undo or genmove. Use CTRL - 0 in case of problems</html>
+GtpConsoleDialog.this.title=GTP Console
 OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
 OptionDialog.cancelButton.text=Cancel
@@ -101,8 +104,6 @@ e.g. 78 - Jump to move No. 78\n\
 Lizzie.prompt.invalidCoordinates=The coordinates input are not correct.
 Leelaz.prompt.engineNotStart=The engine seems stuck. Please use CTRL + C to copy the SGF to clipboard. Then restart Lizzie and press CTRL + V to restore the board.
 Leelaz.prompt.unexpectedProcessEnd=Warning: leelaz process is terminated unexpectedly. Please check!
-LizzieFrame.prompt.enterEngineCommand=Please enter GTP command that will be sent to the engine.\n\
-Please do not input commands that can change the board state, such as play, undo or genmove.
 LizzieFrame.controls.leftArrow=Left Arrow | Go back one move
 LizzieFrame.controls.rightArrow=Right Arrow | Go forward one move
 LizzieFrame.controls.space=Space | Toggle pondering
