Implemented GTP console clear and made some tweaks.

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -37,7 +37,7 @@ EngineProfileManagerDialog.labelProfileManagerNote.text=Configure common used pr
 EngineProfileManagerDialog.okButton.text=OK
 EngineProfileManagerDialog.this.title=Engine Profile Manager
 GtpConsoleDialog.buttonClear.toolTipText=Clear console
-GtpConsoleDialog.labelInfo.text=<html>Please do not input commands that can change the board state, such as play, undo or genmove. Use CTRL - 0 in case of problems</html>
+GtpConsoleDialog.labelHint.text=<html>Please do not input commands that can change the board state, such as play, undo or genmove. Use CTRL - 0 in case of problems</html>
 GtpConsoleDialog.this.title=GTP Console
 OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
