--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -42,6 +42,8 @@ GtpConsoleDialog.this.title=GTP Console
 OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
 OptionDialog.cancelButton.text=Cancel
+OptionDialog.checkBoxShowWhiteWinrateWithWhiteFonts.text=Show white's winrate with white fonts
+OptionDialog.checkBoxAlwaysShowBlackWinrate.text=Always show black winrate
 OptionDialog.checkBoxShowAxis.text=Show
 OptionDialog.checkBoxAutoStartThinkingAfterPlacingMoves.text=Auto start analyzing after placing moves
 OptionDialog.checkBoxTransparentVariation.text=Display transparent variation stones
@@ -57,6 +59,7 @@ OptionDialog.checkBoxShowMoveNumber.text=Show
 OptionDialog.checkBoxShowNextMove.text=Show next move
 OptionDialog.checkBoxShowShadow.text=Show shadow. Shadow size:
 OptionDialog.checkBoxShowWhiteSuggestion.text=Show white
+OptionDialog.labelWinrate.text=Winrate\:
 OptionDialog.labelBestSuggestionColorHint.text=Best suggestion hint circle color\:
 OptionDialog.labelBoardSize.text=Board size selection:
 OptionDialog.labelAnalysisModeOn.text=Analysis mode:
