Changing move supports swap color

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -20,7 +20,7 @@ ByoYomiAutoPlayDialog.this.title=Byo-yomi Auto Play
 ChangeMoveDialog.cancelButton.text=Cancel
 ChangeMoveDialog.labelChangeTo.text=Change coordinates to:
 ChangeMoveDialog.labelMoveNumber.text=Move number:
-ChangeMoveDialog.labelNotes.text=<html>Please input the move number and the correct coordinate you want to modify.<br>The move number should be a positive number.<br>The format of coords are like "A1" or "T19" or "pass"</html>
+ChangeMoveDialog.labelNotes.text=<html>Please input the move number and the correct coordinate you want to modify.<br>The move number should be a positive number.<br>The format of coords are like "A1" or "T19" or "pass" or "swap"</html>
 ChangeMoveDialog.okButton.text=OK
 ChangeMoveDialog.this.title=Change existing move
 EngineProfileManagerDialog.cancelButton.text=Cancel
@@ -129,7 +129,7 @@ LizzieFrame.controls.keyHome=Home | Go to initial board
 LizzieFrame.controls.keyEnd=End | Go to the last move
 LizzieFrame.controls.keyS=S | Show/hide suggestions
 LizzieFrame.controls.keyC=C | Change an existing move
-LizzieFrame.controls.keyE=E | Send command to GTP engine
+LizzieFrame.controls.keyE=E | Show/hide GTP console
 LizzieFrame.controls.keyB=B | Auto play moves with count down
 LizzieFrame.controls.keyEnter=Enter | Play best moves immediately
 LizzieFrame.title.tryPlayingMode=... Try playing ...
