--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -17,7 +17,7 @@ EngineProfileManagerDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.cancelButton.text=\u53D6\u6D88
 ChangeMoveDialog.labelChangeTo.text=\u4FEE\u6539\u5750\u6807\u4E3A:
 ChangeMoveDialog.labelMoveNumber.text=\u8981\u4FEE\u6539\u7684\u624B\u6570:
-ChangeMoveDialog.labelNotes.text=<html>\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. <br>\u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u624B\u6570\u3002\u5982\u679C\u770B\u4E0D\u5230\u624B\u6570\uFF0C\u8BF7\u5173\u95ED\u5BF9\u8BDD\u6846\u540E\u6309N\u952E\u3002<br>\u5750\u6807\u5F62\u5F0F\u5982A1\u3001T19\uFF0C\u5B57\u6BCD\u5728\u524D\uFF0C\u6216\u8005pass\u3002</html>
+ChangeMoveDialog.labelNotes.text=<html>\u8BF7\u8F93\u5165\u8981\u4FEE\u6539\u7684\u624B\u6570\u4EE5\u53CA\u6B63\u786E\u7684\u5750\u6807. <br>\u624B\u6570\u81F3\u5C11\u662F1\uFF0C\u6700\u591A\u662F\u6700\u540E\u4E00\u624B\u624B\u6570\u3002\u5982\u679C\u770B\u4E0D\u5230\u624B\u6570\uFF0C\u8BF7\u5173\u95ED\u5BF9\u8BDD\u6846\u540E\u6309N\u952E\u3002<br>\u5750\u6807\u5F62\u5F0F\u5982A1\u3001T19\uFF0C\u5B57\u6BCD\u5728\u524D\uFF0C\u6216\u8005pass\u548Cswap\u3002</html>
 ChangeMoveDialog.okButton.text=\u786E\u5B9A
 ChangeMoveDialog.this.title=\u4FEE\u6539\u5DF2\u4E0B\u7684\u5B50
 OptionDialog.buttonManage.text=\u7BA1\u7406...
@@ -122,7 +122,7 @@ LizzieFrame.controls.keyHome=Home | \u56DE\u5230\u68CB\u8C31\u5F00\u59CB\uFF08\u
 LizzieFrame.controls.keyEnd=End | \u8DF3\u8F6C\u5230\u68CB\u8C31\u6700\u540E
 LizzieFrame.controls.keyS=S | \u663E\u793A/\u9690\u85CF\u9009\u70B9\u63D0\u793A\uFF08\u9ED1\u767D\u5206\u5F00\u63A7\u5236\uFF09
 LizzieFrame.controls.keyC=C | \u5386\u53F2\u68CB\u6B65\u6539\u9519
-LizzieFrame.controls.keyE=E | \u5411GTP\u5F15\u64CE\u53D1\u9001\u547D\u4EE4
+LizzieFrame.controls.keyE=E | \u663E\u793A/\u9690\u85CFGTP\u63A7\u5236\u53F0
 LizzieFrame.controls.keyB=B | \u6253\u5F00\u8BFB\u79D2\u7A97\u53E3\u81EA\u52A8\u843D\u5B50
 LizzieFrame.controls.keyEnter=Enter | \u7ACB\u523B\u5728\u5F53\u524D\u6700\u4F73\u9009\u70B9\u843D\u5B50
 LizzieFrame.title.tryPlayingMode=... Try playing ...
