Changed max analysis time to seconds.

--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle.properties
@@ -68,7 +68,7 @@ OptionDialog.labelBoardDisplay.text=Board display:
 OptionDialog.labelLeelazCommandLine.text=Leelaz command line:
 OptionDialog.labelMainWindow.text=Main window:
 OptionDialog.labelMaxAnalysisTime.text=Max time:
-OptionDialog.labelMinute.text=minute(s)
+OptionDialog.labelAnalysisTimeUnit.text=second(s)
 OptionDialog.labelMoveNumber.text=Move number:
 OptionDialog.labelMoveNumberLimitLabelTail.text=move(s).
 OptionDialog.labelNotes.text=Note: Please wait patiently for a while for lizzie to restart after you change the command line.
