--- a/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/wagner/stephanie/lizzie/i18n/GuiBundle_zh.properties
@@ -41,7 +41,7 @@ OptionDialog.labelBoardDisplay.text=\u68CB\u76D8\u663E\u793A:
 OptionDialog.labelLeelazCommandLine.text=Leelaz\u7684\u547D\u4EE4\u884C\u9009\u9879:
 OptionDialog.labelMainWindow.text=\u4E3B\u7A97\u53E3:
 OptionDialog.labelMaxAnalysisTime.text=\u6700\u957F\u5206\u6790\u65F6\u95F4:
-OptionDialog.labelMinute.text=\u5206\u949F
+OptionDialog.labelAnalysisTimeUnit.text=\u79D2
 OptionDialog.labelMoveNumber.text=\u624B\u6570:
 OptionDialog.labelMoveNumberLimitLabelTail.text=\u624B.
 OptionDialog.labelNotes.text=\u6CE8\u610F\uFF1A\u4FEE\u6539\u5B8CLeelaz\u547D\u4EE4\u884C\u9009\u9879\u540E, Leelaz\u4F1A\u81EA\u52A8\u91CD\u542F\uFF0C\u671F\u95F4\u754C\u9762\u6CA1\u6709\u52A8\u9759\uFF0C\u8BF7\u8010\u5FC3\u7B49\u4E00\u4F1A\uFF0C\u4E0D\u8981\u64CD\u4F5C
