Support 5x5, 7x7 and 15x15 boards

--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
@@ -77,6 +77,9 @@ OptionDialog.labelSuggestion.text=Suggestions:
 OptionDialog.labelTryPlayingMode.text=Try playing mode:
 OptionDialog.labelVariationLimit.text=Variation limit:
 OptionDialog.okButton.text=OK
+OptionDialog.radioButtonBoard7x7.text=7x7
+OptionDialog.radioButtonBoard5x5.text=5x5
+OptionDialog.radioButtonBoard15x15.text=15x15
 OptionDialog.radioButtonBoard19x19.text=19x19
 OptionDialog.radioButtonBoard13x13.text=13x13
 OptionDialog.radioButtonBoard9x9.text=9x9
