--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
@@ -181,3 +181,6 @@ GtpConsoleDialog.labelHint.text=<html>\u8BF7\u7279\u522B\u6CE8\u610F\u4E0D\u8981
 OptionDialog.checkBoxAlwaysShowBlackWinrate.text=\u8F6E\u767D\u68CB\u843D\u5B50\u65F6\u4E5F\u663E\u793A\u9ED1\u68CB\u80DC\u7387
 OptionDialog.checkBoxShowWhiteWinrateWithWhiteFonts.text=\u663E\u793A\u767D\u68CB\u80DC\u7387\u65F6\u4F7F\u7528\u767D\u5B57
 OptionDialog.labelWinrate.text=\u80DC\u7387\u663E\u793A:
+OptionDialog.radioButtonBoard15x15.text=15x15
+OptionDialog.radioButtonBoard5x5.text=5x5
+OptionDialog.radioButtonBoard7x7.text=7x7
