Added status bar with next move and prisoner info.

--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
@@ -36,6 +36,11 @@ EngineProfileManagerDialog.labelProfile9.text=Profile 9:
 EngineProfileManagerDialog.labelProfileManagerNote.text=Configure common used profiles below. Each profile has a shortcut CTRL + <Profile Number>
 EngineProfileManagerDialog.okButton.text=OK
 EngineProfileManagerDialog.this.title=Engine Profile Manager
+GameInfoDialog.cancelButton.text=Cancel
+GameInfoDialog.labelWhitePlayerName.text=White Player Name\:
+GameInfoDialog.labelBlackPlayerName.text=Black Player Name\:
+GameInfoDialog.okButton.text=OK
+GameInfoDialog.this.title=Edit Game Information
 GtpConsoleDialog.buttonClear.toolTipText=Clear console
 GtpConsoleDialog.labelHint.text=<html>Please do not input commands that can change the board state, such as play, undo or genmove. Use CTRL - 0 in case of problems</html>
 GtpConsoleDialog.this.title=GTP Console
@@ -179,3 +184,4 @@ White dead stone: %d\n\
 Black prisoner: %d\n\
 White prisoner: %d\n\
 The black or white territory includes opponent's dead stones.
+LizzieFrame.statusBar.formatter=Next: %s. Black prisoners: %d, White prisioners: %d
