--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
@@ -184,3 +184,9 @@ OptionDialog.labelWinrate.text=\u80DC\u7387\u663E\u793A:
 OptionDialog.radioButtonBoard15x15.text=15x15
 OptionDialog.radioButtonBoard5x5.text=5x5
 OptionDialog.radioButtonBoard7x7.text=7x7
+LizzieFrame.statusBar.formatter=\u4E0B\u4E00\u624B: %s\u68CB. \u9ED1\u68CB\u63D0\u5B50: %d\u4E2A, \u767D\u68CB\u63D0\u5B50: %d\u4E2A.
+GameInfoDialog.cancelButton.text=\u53D6\u6D88
+GameInfoDialog.labelBlackPlayerName.text=\u9ED1\u68CB\u68CB\u624B:
+GameInfoDialog.labelWhitePlayerName.text=\u767D\u68CB\u68CB\u624B:
+GameInfoDialog.okButton.text=\u786E\u5B9A
+GameInfoDialog.this.title=\u7F16\u8F91\u68CB\u5C40\u4FE1\u606F
