Support handicap move number displaying.

--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
@@ -44,6 +44,12 @@ GameInfoDialog.this.title=Edit Game Information
 GtpConsoleDialog.buttonClear.toolTipText=Clear console
 GtpConsoleDialog.labelHint.text=<html>Please do not input commands that can change the board state, such as play, undo or genmove. Use CTRL - 0 in case of problems</html>
 GtpConsoleDialog.this.title=GTP Console
+HandicapSettingDialog.buttonReset.text=Reset
+HandicapSettingDialog.cancelButton.text=Cancel
+HandicapSettingDialog.labelHelp.text=<html>Display move number better by marking some paticular move as the first move.</html>
+HandicapSettingDialog.labelMoveNumberToMask.text=Move number to mark as first move:
+HandicapSettingDialog.okButton.text=OK
+HandicapSettingDialog.this.title=Handicap Move Number Settings
 OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
 OptionDialog.cancelButton.text=Cancel
@@ -185,3 +191,5 @@ Black prisoner: %d\n\
 White prisoner: %d\n\
 The black or white territory includes opponent's dead stones.
 LizzieFrame.statusBar.formatter=Next: %s. Black prisoners: %d, White prisioners: %d
+LizzieFrame.controls.keyD=D | Set handicap move numbers
+LizzieFrame.menu.navigate.setHandicapMoves=Set Handicap Move Number Display
