--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
@@ -190,3 +190,11 @@ GameInfoDialog.labelBlackPlayerName.text=\u9ED1\u68CB\u68CB\u624B:
 GameInfoDialog.labelWhitePlayerName.text=\u767D\u68CB\u68CB\u624B:
 GameInfoDialog.okButton.text=\u786E\u5B9A
 GameInfoDialog.this.title=\u7F16\u8F91\u68CB\u5C40\u4FE1\u606F
+HandicapSettingDialog.cancelButton.text=\u53D6\u6D88
+HandicapSettingDialog.labelHelp.text=<html>MyLizzie\u6682\u65F6\u6CA1\u6709\u5BF9\u8BA9\u5B50\u7684\u76F4\u63A5\u652F\u6301\uFF0C\u4F5C\u4E3A\u66FF\u4EE3\uFF0C\u53EF\u4EE5\u4ECE\u7A7A\u67B0\u51FA\u53D1\uFF0C\u5728\u68CB\u76D8\u4E0A\u6446\u5B50\u3002\u9ED1\u843D\u5B50\uFF0C\u767Dpass\uFF0C\u9ED1\u843D\u5B50\uFF0C\u767Dpass\uFF0C\u2026\u2026\uFF0C\u9ED1\u843D\u5B50\u3002\u4E0B\u4E00\u624B\u767D\u68CB\u843D\u5B50\u5F00\u59CB\u624D\u662F\u68CB\u5C40\u771F\u6B63\u7684\u5F00\u59CB\u3002<br>\u5982\u679C\u6211\u4EEC\u628A\u767D\u68CB\u7684\u8FD9\u4E00\u624B\u6807\u8BB0\u4E3A\u7B2C\u4E00\u624B\uFF0C\u90A3\u4E48\u624B\u6570\u663E\u793A\u5C31\u7B26\u5408\u6211\u4EEC\u7684\u4E60\u60EF\u4E86\u3002Mylizzie\u4F1A\u667A\u80FD\u8BC6\u522B\u8FD9\u4E00\u624B\uFF0C\u5982\u679C\u8BC6\u522B\u4E0D\u6B63\u786E\uFF0C\u8BF7\u624B\u5DE5\u5728\u4E0B\u9762\u8F93\u5165\u771F\u6B63\u7684\u7B2C\u4E00\u624B\u624B\u6570\u3002<br>\u6CE8\u610F\uFF1A\u672C\u5BF9\u8BDD\u6846\u91CC\u9762\u7684\u624B\u6570\u59CB\u7EC8\u662F\u4EE5\u7A7A\u67B0\u4E3A0\u624B\u5F00\u59CB\u8BA1\u6570\u7684\u624B\u6570\u3002</html>
+HandicapSettingDialog.labelMoveNumberToMask.text=\u5C06\u4ECE\u7A7A\u67B0\u5F00\u59CB\u8BA1\u6570\u7684\u8FD9\u4E00\u624B\u6807\u8BB0\u4E3A\u7B2C\u4E00\u624B:
+HandicapSettingDialog.okButton.text=\u786E\u5B9A
+HandicapSettingDialog.this.title=\u8BA9\u5B50\u68CB\u624B\u6570\u663E\u793A\u8BBE\u7F6E
+HandicapSettingDialog.buttonReset.text=\u91CD\u7F6E
+LizzieFrame.controls.keyD=D | \u8BBE\u7F6E\u8BA9\u5B50\u68CB\u7684\u624B\u6570\u663E\u793A
+LizzieFrame.menu.navigate.setHandicapMoves=\u8BBE\u7F6E\u8BA9\u5B50\u68CB\u624B\u6570\u663E\u793A
