Supported komi setting in new game info dialog and merged handicap settings in the dialog.

--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
@@ -36,7 +36,12 @@ EngineProfileManagerDialog.labelProfile9.text=Profile 9:
 EngineProfileManagerDialog.labelProfileManagerNote.text=Configure common used profiles below. Each profile has a shortcut CTRL + <Profile Number>
 EngineProfileManagerDialog.okButton.text=OK
 EngineProfileManagerDialog.this.title=Engine Profile Manager
+GameInfoDialog.buttonAutoDetermine.text=Auto Find
 GameInfoDialog.cancelButton.text=Cancel
+GameInfoDialog.labelKomi.text=Komi:
+GameInfoDialog.labelKomiNote.text=<html>Note 2: Komi setting should be used with engines that support dynamic komi.</html>
+GameInfoDialog.labelMoveNumberHint.text=<html>Note: Skip first n-1 moves and mark the nth move as first move.</html>
+GameInfoDialog.labelDoNotShowFirstNMoveNumbers.text=Move number starts at\:
 GameInfoDialog.labelWhitePlayerName.text=White Player Name\:
 GameInfoDialog.labelBlackPlayerName.text=Black Player Name\:
 GameInfoDialog.okButton.text=OK
@@ -44,12 +49,6 @@ GameInfoDialog.this.title=Edit Game Information
 GtpConsoleDialog.buttonClear.toolTipText=Clear console
 GtpConsoleDialog.labelHint.text=<html>Please do not input commands that can change the board state, such as play, undo or genmove. Use CTRL - 0 in case of problems</html>
 GtpConsoleDialog.this.title=GTP Console
-HandicapSettingDialog.buttonReset.text=Reset
-HandicapSettingDialog.cancelButton.text=Cancel
-HandicapSettingDialog.labelHelp.text=<html>Display move number better by marking some paticular move as the first move.</html>
-HandicapSettingDialog.labelMoveNumberToMask.text=Move number to mark as first move:
-HandicapSettingDialog.okButton.text=OK
-HandicapSettingDialog.this.title=Handicap Move Number Settings
 OptionDialog.buttonManage.text=Manage...
 OptionDialog.buttonResetCommandLine.text=Reset
 OptionDialog.cancelButton.text=Cancel
@@ -190,6 +189,7 @@ White dead stone: %d\n\
 Black prisoner: %d\n\
 White prisoner: %d\n\
 The black or white territory includes opponent's dead stones.
-LizzieFrame.statusBar.formatter=Next: %s. Black prisoners: %d, White prisioners: %d
-LizzieFrame.controls.keyD=D | Set handicap move numbers
-LizzieFrame.menu.navigate.setHandicapMoves=Set Handicap Move Number Display
+LizzieFrame.statusBar.formatter=Komi: %.1f. Next: %s. Black prisoners: %d, White prisioners: %d.
+LizzieFrame.controls.keyI=I | Set Game Info
+LizzieFrame.menu.navigate.setGameInfo=Set Game Info
+GameInfoDialog.prompt.komiFormatError=Incorrect komi settings: not a valid number.
