--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
@@ -184,17 +184,17 @@ OptionDialog.labelWinrate.text=\u80DC\u7387\u663E\u793A:
 OptionDialog.radioButtonBoard15x15.text=15x15
 OptionDialog.radioButtonBoard5x5.text=5x5
 OptionDialog.radioButtonBoard7x7.text=7x7
-LizzieFrame.statusBar.formatter=\u4E0B\u4E00\u624B: %s\u68CB. \u9ED1\u68CB\u63D0\u5B50: %d\u4E2A, \u767D\u68CB\u63D0\u5B50: %d\u4E2A.
+LizzieFrame.statusBar.formatter=\u8D34\u76EE: %.1f. \u4E0B\u4E00\u624B: %s\u68CB. \u9ED1\u68CB\u63D0\u5B50: %d\u4E2A, \u767D\u68CB\u63D0\u5B50: %d\u4E2A.
 GameInfoDialog.cancelButton.text=\u53D6\u6D88
 GameInfoDialog.labelBlackPlayerName.text=\u9ED1\u68CB\u68CB\u624B:
+GameInfoDialog.labelKomi.text=\u8D34\u76EE\u6570:
+GameInfoDialog.labelKomiNote.text=<html>\u6CE82\uFF1A\u8D34\u76EE\u6570\u8BBE\u7F6E\u5FC5\u987B\u914D\u5408\u652F\u6301\u52A8\u6001\u8D34\u76EE\u7684\u5F15\u64CE\u624D\u6709\u6548\u3002\u70B9\u76EE\u65F6\u59CB\u7EC8\u6709\u6548\u3002</html>
 GameInfoDialog.labelWhitePlayerName.text=\u767D\u68CB\u68CB\u624B:
 GameInfoDialog.okButton.text=\u786E\u5B9A
 GameInfoDialog.this.title=\u7F16\u8F91\u68CB\u5C40\u4FE1\u606F
-HandicapSettingDialog.cancelButton.text=\u53D6\u6D88
-HandicapSettingDialog.labelHelp.text=<html>MyLizzie\u6682\u65F6\u6CA1\u6709\u5BF9\u8BA9\u5B50\u7684\u76F4\u63A5\u652F\u6301\uFF0C\u4F5C\u4E3A\u66FF\u4EE3\uFF0C\u53EF\u4EE5\u4ECE\u7A7A\u67B0\u51FA\u53D1\uFF0C\u5728\u68CB\u76D8\u4E0A\u6446\u5B50\u3002\u9ED1\u843D\u5B50\uFF0C\u767Dpass\uFF0C\u9ED1\u843D\u5B50\uFF0C\u767Dpass\uFF0C\u2026\u2026\uFF0C\u9ED1\u843D\u5B50\u3002\u4E0B\u4E00\u624B\u767D\u68CB\u843D\u5B50\u5F00\u59CB\u624D\u662F\u68CB\u5C40\u771F\u6B63\u7684\u5F00\u59CB\u3002<br>\u5982\u679C\u6211\u4EEC\u628A\u767D\u68CB\u7684\u8FD9\u4E00\u624B\u6807\u8BB0\u4E3A\u7B2C\u4E00\u624B\uFF0C\u90A3\u4E48\u624B\u6570\u663E\u793A\u5C31\u7B26\u5408\u6211\u4EEC\u7684\u4E60\u60EF\u4E86\u3002Mylizzie\u4F1A\u667A\u80FD\u8BC6\u522B\u8FD9\u4E00\u624B\uFF0C\u5982\u679C\u8BC6\u522B\u4E0D\u6B63\u786E\uFF0C\u8BF7\u624B\u5DE5\u5728\u4E0B\u9762\u8F93\u5165\u771F\u6B63\u7684\u7B2C\u4E00\u624B\u624B\u6570\u3002<br>\u6CE8\u610F\uFF1A\u672C\u5BF9\u8BDD\u6846\u91CC\u9762\u7684\u624B\u6570\u59CB\u7EC8\u662F\u4EE5\u7A7A\u67B0\u4E3A0\u624B\u5F00\u59CB\u8BA1\u6570\u7684\u624B\u6570\u3002</html>
-HandicapSettingDialog.labelMoveNumberToMask.text=\u5C06\u4ECE\u7A7A\u67B0\u5F00\u59CB\u8BA1\u6570\u7684\u8FD9\u4E00\u624B\u6807\u8BB0\u4E3A\u7B2C\u4E00\u624B:
-HandicapSettingDialog.okButton.text=\u786E\u5B9A
-HandicapSettingDialog.this.title=\u8BA9\u5B50\u68CB\u624B\u6570\u663E\u793A\u8BBE\u7F6E
-HandicapSettingDialog.buttonReset.text=\u91CD\u7F6E
-LizzieFrame.controls.keyD=D | \u8BBE\u7F6E\u8BA9\u5B50\u68CB\u7684\u624B\u6570\u663E\u793A
-LizzieFrame.menu.navigate.setHandicapMoves=\u8BBE\u7F6E\u8BA9\u5B50\u68CB\u624B\u6570\u663E\u793A
+LizzieFrame.controls.keyI=D | \u8BBE\u7F6E\u5BF9\u5C40\u4FE1\u606F
+LizzieFrame.menu.navigate.setGameInfo=\u8BBE\u7F6E\u5BF9\u5C40\u4FE1\u606F
+GameInfoDialog.labelDoNotShowFirstNMoveNumbers.text=\u624B\u6570\u4ECE\u5B9E\u9645\u7684\u7B2Cn\u624B\u5F00\u59CB:
+GameInfoDialog.labelMoveNumberHint.text=<html>\u6CE8\uFF1A\u8FD9\u4E2A\u9009\u9879\u7684\u4F5C\u7528\u662F\u8DF3\u8FC7\u524D\u9762n-1\u624B\uFF08\u8BA9\u5B50\u6446\u7684\u9ED1\u68CB\uFF0C<b>\u5305\u62EC\u767D\u68CBpass\u7684</b>\uFF09\uFF0C\u628A\u7B2Cn\u624B\u6807\u8BB0\u4E3A\u7B2C1\u624B\u3002\u8FD9\u6837\u53EF\u4EE5\u8BA9\u624B\u6570\u663E\u793A\u7B26\u5408\u8BA9\u5B50\u68CB\u68CB\u8C31\u7684\u624B\u6570\u663E\u793A\u4E60\u60EF\u3002<br>\u4E00\u822C\u6765\u8BF4\uFF0C\u70B9\u51FB\u201C\u81EA\u52A8\u786E\u5B9A\u201D\u53EF\u4EE5\u81EA\u52A8\u5224\u65AD\u8FD9\u4E2A\u503C\u3002\u5982\u679C\u81EA\u52A8\u786E\u5B9A\u7684\u503C\u4E0D\u6B63\u786E\uFF0C\u8BF7\u5148\u6539\u62101\uFF0C\u6240\u6709\u68CB\u5B50\u90FD\u663E\u793A\u624B\u6570\uFF0C\u7136\u540E\u770B\u4E00\u4E0B\u60F3\u8981\u6807\u8BB0\u4E3A\u7B2C\u4E00\u624B\u7684\u90A3\u624B\u663E\u793A\u7684\u624B\u6570\u662F\u591A\u5C11\uFF0C\u586B\u5165\u5373\u53EF\u3002</html>
+GameInfoDialog.buttonAutoDetermine.text=\u81EA\u52A8\u786E\u5B9A
+GameInfoDialog.prompt.komiFormatError=\u8D34\u76EE\u6570\u7684\u683C\u5F0F\u4E0D\u6B63\u786E\uFF1A\u4E0D\u662F\u6709\u6548\u7684\u6570\u5B57\u3002
