--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle.properties
@@ -181,7 +181,8 @@ LizzieFrame.menu.game.pass=Pass
 Leelaz.prompt.engineNotCompatible=This version of Leela Zero is incompatible with Lizzie.Please follow the instructions in the readme.
 LizzieFrame.menu.help=Help
 LizzieFrame.menu.help.about=About...
-LizzieFrame.prompt.detailedScoreEstimation=Score estimation by engine %s (komi %.1f): %s leads %.1f point(s).\n\
+LizzieFrame.prompt.detailedScoreEstimation=Score estimation by engine %s (komi %.1f):\n\
+%s leads %.1f point(s); Stone diff: %s leads %.1f point(s).\n\
 Black territory: %d\n\
 White territory: %d\n\
 Black dead stone: %d\n\
