--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
@@ -165,7 +165,8 @@ AboutDialog.okButton.text=\u786E\u5B9A
 AboutDialog.this.title=\u5173\u4E8EMyLizzie
 LizzieFrame.menu.help=\u5E2E\u52A9
 LizzieFrame.menu.help.about=\u5173\u4E8E...
-LizzieFrame.prompt.detailedScoreEstimation=%s\u7684\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE): %s\u9886\u5148%.1f\u76EE\u3002\n\
+LizzieFrame.prompt.detailedScoreEstimation=%s\u7684\u70B9\u76EE\u7ED3\u679C(\u9ED1\u8D34%.1f\u76EE):\n\
+%s\u9886\u5148%.1f\u76EE; \u4F30\u8BA1\u5B50\u5DEE: %s\u9886\u5148%.1f\u70B9.\n\
 \u9ED1\u68CB\u5730\u57DF: %d\u4EA4\u53C9\u70B9\n\
 \u767D\u68CB\u5730\u57DF: %d\u4EA4\u53C9\u70B9\n\
 \u9ED1\u68CB\u6B7B\u5B50: %d\u4E2A\n\
