--- a/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
+++ b/src/main/resources/featurecat/lizzie/i18n/GuiBundle_zh.properties
@@ -193,7 +193,7 @@ GameInfoDialog.labelKomiNote.text=<html>\u6CE82\uFF1A\u8D34\u76EE\u6570\u8BBE\u7
 GameInfoDialog.labelWhitePlayerName.text=\u767D\u68CB\u68CB\u624B:
 GameInfoDialog.okButton.text=\u786E\u5B9A
 GameInfoDialog.this.title=\u7F16\u8F91\u68CB\u5C40\u4FE1\u606F
-LizzieFrame.controls.keyI=D | \u8BBE\u7F6E\u5BF9\u5C40\u4FE1\u606F
+LizzieFrame.controls.keyI=I | \u8BBE\u7F6E\u5BF9\u5C40\u4FE1\u606F
 LizzieFrame.menu.navigate.setGameInfo=\u8BBE\u7F6E\u5BF9\u5C40\u4FE1\u606F
 GameInfoDialog.labelDoNotShowFirstNMoveNumbers.text=\u624B\u6570\u4ECE\u5B9E\u9645\u7684\u7B2Cn\u624B\u5F00\u59CB:
 GameInfoDialog.labelMoveNumberHint.text=<html>\u6CE8\uFF1A\u8FD9\u4E2A\u9009\u9879\u7684\u4F5C\u7528\u662F\u8DF3\u8FC7\u524D\u9762n-1\u624B\uFF08\u8BA9\u5B50\u6446\u7684\u9ED1\u68CB\uFF0C<b>\u5305\u62EC\u767D\u68CBpass\u7684</b>\uFF09\uFF0C\u628A\u7B2Cn\u624B\u6807\u8BB0\u4E3A\u7B2C1\u624B\u3002\u8FD9\u6837\u53EF\u4EE5\u8BA9\u624B\u6570\u663E\u793A\u7B26\u5408\u8BA9\u5B50\u68CB\u68CB\u8C31\u7684\u624B\u6570\u663E\u793A\u4E60\u60EF\u3002<br>\u4E00\u822C\u6765\u8BF4\uFF0C\u70B9\u51FB\u201C\u81EA\u52A8\u786E\u5B9A\u201D\u53EF\u4EE5\u81EA\u52A8\u5224\u65AD\u8FD9\u4E2A\u503C\u3002\u5982\u679C\u81EA\u52A8\u786E\u5B9A\u7684\u503C\u4E0D\u6B63\u786E\uFF0C\u8BF7\u5148\u6539\u62101\uFF0C\u6240\u6709\u68CB\u5B50\u90FD\u663E\u793A\u624B\u6570\uFF0C\u7136\u540E\u770B\u4E00\u4E0B\u60F3\u8981\u6807\u8BB0\u4E3A\u7B2C\u4E00\u624B\u7684\u90A3\u624B\u663E\u793A\u7684\u624B\u6570\u662F\u591A\u5C11\uFF0C\u586B\u5165\u5373\u53EF\u3002</html>
